--- a/servlet/src/main/webapp/index.html
+++ b/servlet/src/main/webapp/index.html
@@ -37,11 +37,16 @@
             <li><a href="/front-controller/v4/members">회원목록</a></li> </ul>
     </li>
     <li>FrontController - v5 - v3
+        <ul>
+            <li><a href="/front-controller/v5/v3/members/new-form">회원가입</a></li>
+            <li><a href="/front-controller/v5/v3/members">회원목록</a></li>
+        </ul>
     </li>
     <li>FrontController - v5 - v4
         <ul>
-            <li><a href="/front-controller/v5/v4/members/new-form">회원가입</a></
-            <li><a href="/front-controller/v5/v4/members">회원목록</a></li> </ul>
+            <li><a href="/front-controller/v5/v4/members/new-form">회원가입</a></li>
+            <li><a href="/front-controller/v5/v4/members">회원목록</a></li>
+        </ul>
     </li>
     <li>SpringMVC - v1
         <ul>
