thymeleaf 기초 진행중

--- a/thymeleaf-basic/src/main/resources/static/index.html
+++ b/thymeleaf-basic/src/main/resources/static/index.html
@@ -36,7 +36,7 @@
     </li>
     <li>템플릿 레이아웃
         <ul>
-            <li><a href="/template/fragment">템플릿 조각</a></li> <li><a href="/template/layout">유연한 레이아웃</a></li> <li><a href="/template/layoutExtend">레이아웃 상속</a></li>
+            <li><a href="/templates/fragment">템플릿 조각</a></li> <li><a href="/templates/layout">유연한 레이아웃</a></li> <li><a href="/templates/layoutExtend">레이아웃 상속</a></li>
         </ul> </li>
 </ul>
 </body>
